add benchmark class